--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ scipy - for the stats linear regression function to build a trend line for our c
 shiny - used to build our web app in Python
 shinylive - used to build to our docs folder and host our app on GitHub Pages
 shinywidgets - a wrapper for complex widgets like plotly charts
+palmerpenguins
